--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - cicd
     pull_request:
       branches: [main]
       types: [opened, synchronize]
@@ -20,56 +21,56 @@ jobs:
         run: cd frontend
         run: npm install  
 
-      - name: Check style
-        run: npm run lint
+#      - name: Check style
+#        run: npm run lint
 
-      - name: Build
-        run: npm run build
+#      - name: Build
+#        run: npm run build
 
-      - name: e2e tests
-        uses: cypress-io/github-action@v5
-        with:
-          command: npm run test:e2e
-          start: cd backend AND npm run start
-          wait-on: http://localhost:3001 #conf
-
-      - name: Deploy #missing
-        if: ${{ github.event_name == 'push' }}
-        uses: actions/checkout@v3
-      - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-
-      - name: Test Success #missing
-        uses: rjstone/discord-webhook-notify@v1
-        if: success()
-        with:
-          severity: info
-          text: A new version of Pokedex deployed
-          description: "to https://full-stack-open-pokedex-niqdevgit.fly.dev/ by ${{ github.event.head_commit.author.username }}"
-          details: Test Succeeded!
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-      - name: Test Failure #missing
-        uses: rjstone/discord-webhook-notify@v1
-        if: failure()
-        with:
-          severity: error
-          text: Build failed
-          description: "commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }} broke the build :("
-          details: Test Failed!
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-
-  tag_release: #missing
-    needs: [simple_deployment_pipeline]
-    if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: '0'
-      - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.64.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BUMP: patch
+#      - name: e2e tests
+#        uses: cypress-io/github-action@v5
+#        with:
+#          command: npm run test:e2e
+#          start: cd backend AND npm run start
+#          wait-on: http://localhost:3001 #conf
+#
+#      - name: Deploy #missing
+#        if: ${{ github.event_name == 'push' }}
+#      - uses: superfly/flyctl-actions/setup-flyctl@master
+#        uses: actions/checkout@v3
+#      - run: flyctl deploy --remote-only
+#        env:
+#          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+#
+#      - name: Test Success #missing
+#        uses: rjstone/discord-webhook-notify@v1
+#        if: success()
+#        with:
+#          severity: info
+#          text: A new version of Pokedex deployed
+#          description: "to https://full-stack-open-pokedex-niqdevgit.fly.dev/ by ${{ github.event.head_commit.author.username }}"
+#          details: Test Succeeded!
+#          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+#      - name: Test Failure #missing
+#        uses: rjstone/discord-webhook-notify@v1
+#        if: failure()
+#        with:
+#          severity: error
+#          text: Build failed
+#          description: "commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }} broke the build :("
+#          details: Test Failed!
+#          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+#
+#  tag_release: #missing
+#    needs: [simple_deployment_pipeline]
+#    if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
+#    runs-on: ubuntu-20.04
+#    steps:
+#      - uses: actions/checkout@v2
+#        with:
+#          fetch-depth: '0'
+#      - name: Bump version and push tag
+#        uses: anothrNick/github-tag-action@1.64.0
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          DEFAULT_BUMP: patch
