--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,8 +22,8 @@ jobs:
           cd frontend
           npm install  
 
-#      - name: Check style
-#        run: npm run lint
+      - name: Check style
+        run: npm run lint
 
 #      - name: Build
 #        run: npm run build
