--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,8 +28,10 @@ jobs:
           npm run lint
         
 
-#      - name: Build
-#        run: npm run build
+      - name: Build
+        run: |
+          cd frontend
+          npm run build
 
 #      - name: e2e tests
 #        uses: cypress-io/github-action@v5
