--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,12 +33,13 @@ jobs:
           cd frontend
           npm run build
 
-#      - name: e2e tests
-#        uses: cypress-io/github-action@v5
-#        with:
-#          command: npm run test:e2e
-#          start: cd backend AND npm run start
-#          wait-on: http://localhost:3001 #conf
+      - name: e2e tests
+        run: cd backend
+        uses: cypress-io/github-action@v5
+        with:
+          command: npm run test:e2e
+          start: cd backend AND npm run start
+          wait-on: http://localhost:3001
 #
 #      - name: Deploy #missing
 #        if: ${{ github.event_name == 'push' }}
