--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,7 +45,9 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v6
         with:
-#          command: npm run test:e2e
+          command: |
+            pwd
+            npm run test:e2e
           start: npm run start
           wait-on: http://localhost:3001
 #
