--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           cd frontend
           npm run build
+          pwd
 
 #      - name: Start Backend
 #        working-directory: backend
