--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -52,31 +52,27 @@ jobs:
       - name: Deploy
         if: ${{ github.event_name == 'push' }}
         run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
-#      - uses: superfly/flyctl-actions/setup-flyctl@master
-#        uses: actions/checkout@v3
-#      - run: flyctl deploy --remote-only
-#        env:
-#          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-#
-#      - name: Test Success #missing
-#        uses: rjstone/discord-webhook-notify@v1
-#        if: success()
-#        with:
-#          severity: info
-#          text: A new version of Pokedex deployed
-#          description: "to https://full-stack-open-pokedex-niqdevgit.fly.dev/ by ${{ github.event.head_commit.author.username }}"
-#          details: Test Succeeded!
-#          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-#      - name: Test Failure #missing
-#        uses: rjstone/discord-webhook-notify@v1
-#        if: failure()
-#        with:
-#          severity: error
-#          text: Build failed
-#          description: "commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }} broke the build :("
-#          details: Test Failed!
-#          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-#
+
+      - name: Test Success
+        uses: rjstone/discord-webhook-notify@v1
+        if: success()
+        with:
+          severity: info
+          text: @Niq deployment was succesfull
+          description: "to https://venla.onrender.com/ by ${{ github.event.head_commit.author.username }}"
+          details: Test Succeeded!
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+
+      - name: Test Failure
+        uses: rjstone/discord-webhook-notify@v1
+        if: failure()
+        with:
+          severity: error
+          text: Build failed
+          description: "commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }} broke the build 💀"
+          details: Test Failed!
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+
 #  tag_release: #missing
 #    needs: [simple_deployment_pipeline]
 #    if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
