--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,13 +4,12 @@ WORKDIR /usr/src/app
 
 COPY . .
 
-RUN apt-get update && apt-get install -y samba
-RUN mkdir -p /usr/src/sambashare
-COPY smb.conf /etc/samba/smb.conf
+RUN apt-get update && apt-get install -y apache2 \
+    && service apache2 start \
+    && npm ci \
+    && npm run build:container \
+    && cp -r /usr/src/app/dist /var/www/html/
 
-RUN npm ci
+CMD ["apache2ctl", "-D", "FOREGROUND"]
 
-CMD npm run build:container
-CMD cp -r /usr/src/app/dist /usr/src/sambashare/
-CMD ["smbd", "--foreground", "--no-process-group"]
 
