--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,6 +8,10 @@ on:
       branches: [main]
       types: [opened, synchronize]
 
+env:
+  MONGODB_URL: ${{ secrets.MONGODB_URL }}
+  SECRET: ${{ secrets.SECRET }}
+
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-20.04
