--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,10 +8,6 @@ on:
       branches: [main]
       types: [opened, synchronize]
 
-env:
-  MONGODB_URL: ${{ secrets.MONGODB_URL }}
-  SECRET: ${{ secrets.SECRET }}
-
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-20.04
@@ -44,7 +40,7 @@ jobs:
       - name: Start Backend
         run: |
           cd backend
-          npm run start &
+          MONGODB_URL=${{ secrets.MONGODB_URL }} SECRET=${{ secrets.SECRET }} npm run start &
           sleep 1
 
       - name: e2e tests
