--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Start Backend
         run: |
           cd backend
-          HIDDEN=${{ secrets.HIDDEN }} npm run start &
+          HIDDEN=${{ secrets.HIDDEN }} MONGODB_URI=${{ secrets.MONGODB_URI }} npm run start &
           sleep 1
 
       - name: e2e tests
