typo fixed, mongo URI not URL🫠

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   HIDDEN: ${{ secrets.HIDDEN }} 
-  MONGODB_URL: ${{ secrets.MONGODB_URL }}
+  MONGODB_URI: ${{ secrets.MONGODB_URI }}
   JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
 jobs:
